[package]
name = "min-cl"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Minimal OpenCL Rust bindings."
repository = "https://github.com/elftausend/min-cl"
keywords = ["OpenCL", "bindings", "ffi"]
categories = ["external-ffi-bindings"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
